Update main and text_init functions
updated main and text_init functions to use SDK 2.0 calls
changed to the new #include <pebble.h> and #include <time.h>

--- a/appinfo.json
+++ b/appinfo.json
@@ -4,6 +4,9 @@
     "appKeys": {},
     "longName": "Moontiles (SDK 2)",
     "versionCode": 1,
+    "capabilities": [
+        ""
+    ],
     "shortName": "Moontiles",
     "companyName": "akrs_",
     "watchapp": {
