--- a/appinfo.json
+++ b/appinfo.json
@@ -2,7 +2,7 @@
     "versionLabel": "2",
     "uuid": "689dea96-6903-4df8-a2e8-48a22cb8bc52",
     "appKeys": {},
-    "longName": "Moontiles (SDK 2)",
+    "longName": "Moontiles",
     "versionCode": 1,
     "capabilities": [
         ""
